test/valid/tcomp000_double_wild/tcomp000_double_wild.agu
-- Author: tcomp000, Vasco T. Vasconcelos

let f (_, _) : (Unit, Int) -> Int = 5

let main(_) : Unit -> Unit = print(f (unit, 13))