test/invalid-semantic/tcomp000-wild-on-the-right/wild-on-the-right.agu
-- Author: tcomp000, Vasco T. Vasconcelos

let f (_) : Int -> Int = 2 * _